@@ -7,6 +7,7 @@ Version 0.99.8 (CVS)
 
   Bugfixes:
     - Portability improvement (for Cygwin and hopefully others).
+	- Improved the semantics of directives.
 
 Version 0.99.7 (2004-02-20)
 
